--- a/example/build.gradle
+++ b/example/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion versions.compileSdk
-    buildToolsVersion versions.buildTools
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.galarzaa.androidthings.samples"
         minSdkVersion versions.minSdk
