--- a/example/build.gradle
+++ b/example/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compileOnly "com.google.android.things:androidthings:${versions.thingsLib}"
     implementation "com.android.support:appcompat-v7:${versions.support}"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.volley:volley:1.0.0'
 }
